# ConstraintHg

./: .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/workflows/: python-app.yml  python-publish.yml
demos/: branching_demo.py  config.py  demo_basic.py  demo_branching.py  demo_cycles.py  demo_elevator.py  demo_indexing.py  demo_invalid_cycle.py  demo_linear_motion.py  demo_loops.py  demo_nested_cycle.py  demo_nested_loop.py  demo_pendulum.py  helper.py
docs/: requirements.txt
docs/source/: about.rst  chg_intro.rst  chg_overview.rst  conf.py  constrainthg.rst  constrainthg_intro.rst  demos.rst  index.rst  links.rst  modules.rst  quickstart.rst  research.rst  simple_demo.rst
docs/source/CHGs/: chg_intro.rst  chg_overview.rst  research.rst
docs/source/about/: about.rst  conduct.rst  contact.rst  contributions.rst
docs/source/api/: edge.rst  hypergraph.rst  index.rst  node.rst  relations.rst
docs/source/tutorial/: advanced.rst  cycles.rst  modeling.rst  setup.rst  simulation.rst  tutorial.rst  viability.rst
paper/: paper.bib  paper.md
src/constrainthg/: CONTROL.py  __init__.py  hypergraph.py  main_cli.py  relations.py
test/: test_cycles.py  test_hypergraph.py  test_sequencing.py
tests/: test_demos.py  test_hypergraph.py  test_interface.py
